---------------------------------------------------------------------------------------------------
Version: 3.0.22
Date: ???
  Changes:
    - Added a german translation
---------------------------------------------------------------------------------------------------
Version: 3.0.21
Date: Unreleased
  Info:
    - Skipped due to portal/github version mismatch.
---------------------------------------------------------------------------------------------------
Version: 3.0.20
Date: 2025-07-20
  Changes:
    - Made coal hidden
---------------------------------------------------------------------------------------------------
Version: 3.0.19
Date: 2025-06-28
  Changes:
    - Removed productivity from easiest drill head recipe.
---------------------------------------------------------------------------------------------------
Version: 3.0.17
Date: 2025-6-1
  Changes:
    - Removed prod from the initial solder recipe
    - Updated Ukrainian locale (big mine rename + small typo fixes)
    - Renamed "Purest nitrogen" to "Nitrogen contaminate".
    - Allowed productivity in the purest nitrogen + filtration media recipe.
    - The rail recipe now gives 3 rails instead of 2. The improved rails recipe now gives 12 rails instead of 8. RATIONALE: Despite trains being unlocked at py1 tier, the prohibitively high cost of rails made them unreasonable to build until logistics science.
---------------------------------------------------------------------------------------------------
Version: 3.0.16
Date: 2025-4-13
  Changes:
    - Added new icons for molten silver. Resolves https://github.com/pyanodon/pybugreports/issues/943
---------------------------------------------------------------------------------------------------
Version: 3.0.15
Date: 2025-3-9
  Changes:
    - Fixed casting units placing items on the far side of the belt
---------------------------------------------------------------------------------------------------
Version: 3.0.14
Date: 2025-3-3
  Changes: