@@ -55,8 +55,8 @@ fix_tech("follower-robot-count-4", {order = "000024", prerequisites = {"follower
 fix_tech("follower-robot-count-5", {order = "000033", prerequisites = {"follower-robot-count-4", "utility-science-pack"}, unit = {count = 750, ingredients = {{"automation-science-pack", 10}, {"logistic-science-pack", 6}, {"chemical-science-pack", 3}, {"military-science-pack", 3}, {"utility-science-pack", 1}, {"production-science-pack", 2}}, time = 600}})
 fix_tech("follower-robot-count-6", {order = "000034", prerequisites = {"follower-robot-count-5"}, unit = {count = 1000, ingredients = {{"automation-science-pack", 10}, {"logistic-science-pack", 6}, {"chemical-science-pack", 3}, {"military-science-pack", 3}, {"utility-science-pack", 1}, {"production-science-pack", 2}}, time = 600}})
 fix_tech("follower-robot-count-7", {order = "000036", prerequisites = {"follower-robot-count-6", "space-science-pack"}, unit = {ingredients = {{"automation-science-pack", 20}, {"logistic-science-pack", 10}, {"chemical-science-pack", 6}, {"military-science-pack", 6}, {"production-science-pack", 3}, {"utility-science-pack", 2}, {"space-science-pack", 1}}, time = 1200}})
-fix_tech("stack-inserter", {order = "000025", prerequisites = {"logistics-2"}, unit = {count = 4000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
-fix_tech("inserter-capacity-bonus-1", {order = "000026", prerequisites = {"stack-inserter"}, unit = {count = 5000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
+fix_tech("bulk-inserter", {order = "000025", prerequisites = {"logistics-2"}, unit = {count = 4000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
+fix_tech("inserter-capacity-bonus-1", {order = "000026", prerequisites = {"bulk-inserter"}, unit = {count = 5000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
 fix_tech("inserter-capacity-bonus-2", {order = "000027", prerequisites = {"inserter-capacity-bonus-1"}, unit = {count = 7000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
 fix_tech("inserter-capacity-bonus-3", {order = "000028", prerequisites = {"inserter-capacity-bonus-2", "chemical-science-pack"}, unit = {count = 2500, ingredients = {{"automation-science-pack", 3}, {"logistic-science-pack", 2}, {"chemical-science-pack", 1}}, time = 120}})
 fix_tech("inserter-capacity-bonus-4", {order = "000030", prerequisites = {"inserter-capacity-bonus-3", "production-science-pack"}, unit = {count = 1200, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
@@ -99,7 +99,7 @@ fix_tech("military-3", {order = "000023", prerequisites = {"chemical-science-pac
 fix_tech("military-4", {order = "000030", prerequisites = {"military-3", "explosives", "production-science-pack"}, unit = {count = 1200, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"military-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
 fix_tech("uranium-ammo", {order = "000025", prerequisites = {"uranium-mk01", "tank"}, unit = {count = 1100, ingredients = {{"automation-science-pack", 3}, {"logistic-science-pack", 2}, {"military-science-pack", 1}, {"chemical-science-pack", 1}}, time = 90}})
 fix_tech("atomic-bomb", {order = "000036", prerequisites = {"rocketry", "uranium-mk04", "space-science-pack"}, unit = {count = 500, ingredients = {{"automation-science-pack", 20}, {"logistic-science-pack", 10}, {"chemical-science-pack", 6}, {"military-science-pack", 6}, {"production-science-pack", 3}, {"utility-science-pack", 2}, {"space-science-pack", 1}}, time = 1200}})
-fix_tech("automation-3", {order = "000030", prerequisites = {"production-science-pack", "stack-inserter"}, unit = {count = 1200, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
+fix_tech("automation-3", {order = "000030", prerequisites = {"production-science-pack", "bulk-inserter"}, unit = {count = 1200, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
 fix_tech("explosives", {order = "000023", prerequisites = {"mukmoux"}, unit = {count = 2250, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
 fix_tech("cliff-explosives", {order = "000024", prerequisites = {"explosives", "military-2"}, unit = {count = 3000, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
 fix_tech("land-mine", {order = "000024", prerequisites = {"explosives", "military-science-pack"}, unit = {count = 800, ingredients = {{"automation-science-pack", 3}, {"logistic-science-pack", 2}, {"military-science-pack", 1}}, time = 90}})
@@ -251,7 +251,7 @@ fix_tech("py-burner", {order = "000006", prerequisites = {"coal-processing-1"}, 
 fix_tech("machines-mk01", {order = "000008", prerequisites = {"radars-mk01", "py-storage-tanks"}, unit = {count = 110, ingredients = {{"automation-science-pack", 1}}, time = 30}})
 fix_tech("machines-mk02", {order = "000014", prerequisites = {"machines-mk01", "logistic-science-pack"}, unit = {count = 160, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
 fix_tech("machines-mk03", {order = "000025", prerequisites = {"machines-mk02", "chemical-science-pack", "logistics-2", "wood-processing", "excavation-1"}, unit = {count = 1100, ingredients = {{"automation-science-pack", 3}, {"logistic-science-pack", 2}, {"chemical-science-pack", 1}}, time = 120}})
-fix_tech("machines-mk04", {order = "000031", prerequisites = {"machines-mk03", "stack-inserter", "logistics-3", "desulfurization"}, unit = {count = 1600, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
+fix_tech("machines-mk04", {order = "000031", prerequisites = {"machines-mk03", "bulk-inserter", "logistics-3", "desulfurization"}, unit = {count = 1600, ingredients = {{"automation-science-pack", 6}, {"logistic-science-pack", 3}, {"chemical-science-pack", 2}, {"production-science-pack", 1}}, time = 300}})
 fix_tech("machines-mk05", {order = "000033", prerequisites = {"machines-mk04", "utility-science-pack", "py-accumulator-mk01"}, unit = {count = 750, ingredients = {{"automation-science-pack", 10}, {"logistic-science-pack", 6}, {"chemical-science-pack", 3}, {"military-science-pack", 3}, {"production-science-pack", 2}, {"utility-science-pack", 1}}, time = 600}})
 fix_tech("quartz-mk01", {order = "000010", prerequisites = {"crusher"}, unit = {count = 200, ingredients = {{"automation-science-pack", 1}}, time = 30}})
 fix_tech("quartz-mk02", {order = "000016", prerequisites = {"quartz-mk01", "filtration"}, unit = {count = 300, ingredients = {{"automation-science-pack", 2}, {"logistic-science-pack", 1}}, time = 60}})
